cheapflights.co.uk (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;travel",
  "char_count": 2766,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 8.98,
  "homepage_snapshot_redirected_domain": "cheapflights.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001052823id_/http://www.cheapflights.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001052823id_/http%3A//cheapflights.co.uk",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "cheapflights.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206210349id_/http%3A//www.cheapflights.co.uk/privacy.html",
  "policy_title": "Privacy policy",
  "policy_url": "cheapflights.co.uk/privacy.html",
  "sha1": "fbd2e65b388cea748e27b21d347be860084e56c0",
  "simhash": 7062561615480082613,
  "simhash_updated": false,
  "site_hostname": "cheapflights.co.uk",
  "site_url": "http://cheapflights.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041206210349",
  "word_count": 469,
  "year": 2004
}

--- a/c/ch/che/cheapflights.co.uk.html
+++ b/c/ch/che/cheapflights.co.uk.html
@@ -1,44 +1,49 @@
-<!--The following is the downloaded HTML source of the cheapflights.co.uk privacy policy that was archived on 2004-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040623214846id_/http%3A//cheapflights.co.uk/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cheapflights.co.uk privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206210349id_/http%3A//www.cheapflights.co.uk/privacy.html) for the most accurate reproduction.-->
 
 <html><head>   
 <title>Privacy policy</title>
 <meta name="description" content="Cheap Flights: air tickets, discount flights, travel agents, air fares, late deals, and air travel from the UK.,">
 <meta name="keywords" content="flight, cheap flight, cheap flights, air ticket, air tickets, air, ticket, charter flight, charter flights, bargain fares, bargain, discounted, discount, discount tickets, travel, travel agents, agents, student fare, students, student fares, youth fare, consolidator, consolidators, late deal, late deals, bucket shop, bucket shops, budget, fly, UK, from the UK, airline, airlines, flying, special offers, special offer, discount business class.,">
+<meta name="WT.cg_n" content="CFUK Generic Page">
+<meta name="WT.cg_s" content="Privacy policy">
+<link rel="SHORTCUT ICON" href="/nocache/favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" href="/style/global.css">
 <meta http-equiv="P3P" content="policyref=&quot;http://www.cheapflights.co.uk/w3c/p3p.xml&quot;">
 <link rel="P3Pv1" href="http://www.cheapflights.co.uk/w3c/p3p.xml" type="text/xml">
 <!--Ad2One-->
-<script language="Javascript">
-OAS_query = '?kw1=27&kw2=privacy.html&kw3=&kw4=';</script><script src="/scripts/ad2one.js"></script>
-<!--End Ad2One-->
-<script src="/scripts/openpopup.js"></script>
+
+<script language="JavaScript">
+function doubleclick() {
+   document.write('<SCR'+'IPT SRC="http://ad.uk.doubleclick.net/adj/ad2_cflights/privacy.html;ptype=27;dest=;dept=;dcopt=ist;sz=468x60;ord=819835841?" ></SCR'+'IPT>');
+ }
+</script>
+<!--End Ad2One--><script src="/scripts/openpopup.js"></script>
 </head>
 <body leftmargin="10" topmargin="0" marginheight="0" marginwidth="10" bgcolor="#FFFFFF" text="#000000" link="#000000" vlink="#000000" alink="#0066FF">
-<table width="99%"><tbody><tr><td><!--- start Logo --->
-<table width="99%" border="0" cellspacing="0" cellpadding="0" height="70" align="center"><tbody><tr><td width="260" align="center" valign="bottom" nowrap=""><a href="/"><img src="/images/CFcoukLogo.gif" width="164" height="66" alt="Cheap Flights" border="0" hspace="15"></a></td><td align="right" valign="top"><!--Ad2One--><script language="JavaScript" type="text/javascript" src="/scripts/ad2oneban.js"></script><!--End Ad2One--></td></tr></tbody></table><div class="sep"></div><!--- end Logo ---></td><td align="right"></td></tr></tbody></table>
+<!--- start Logo ---><table width="99%" border="0" cellspacing="0" cellpadding="0" height="70" align="center"><tbody><tr><td width="260" align="center" valign="bottom" nowrap=""><a href="/"><img src="/images/CFcoukLogo.gif" width="164" height="66" alt="Cheap Flights" border="0" hspace="15"></a></td><td align="right" valign="top"><script src="/scripts/ad2one_doubleclick.js"></script></td><td></td></tr></tbody></table><div class="sep"></div><!--- end Logo --->
 <!--- start TopBar --->
 <table width="99%" border="0" cellspacing="0" cellpadding="0" align="center">
 <tbody><tr> 
-<td align="right"><table width="358" height="17" border="0" cellpadding="0" cellspacing="0">
+<td align="right"><table width="358" height="23" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr> 
-          <td width="4" bgcolor="#0066FF"><img src="/images/cf-tab-l.gif" width="4" height="17"></td>
+          <td width="4" valign="top" bgcolor="#0066FF"><img src="/images/cf-tab-l.gif" width="4" height="17"></td>
 <td width="60" align="center" bgcolor="#0066FF"><a href="/" class="tabsml">Flights</a></td>
-          <td width="4" bgcolor="#0066FF"><img src="/images/cf-tab-r.gif" width="4" height="17"></td>
+          <td width="4" valign="top" bgcolor="#0066FF"><img src="/images/cf-tab-r.gif" width="4" height="17"></td>
 <td width="1"><img src="/images/spacer.gif" width="1" height="1"></td>
-          <td width="4" bgcolor="#CC0000"><img src="/images/ch-tab-l.gif" width="4" height="17"></td>
+          <td width="4" valign="top" bgcolor="#CC0000"><img src="/images/ch-tab-l.gif" width="4" height="17"></td>
 <td width="70" align="center" bgcolor="#CC0000"><a href="http://www.cheapholidaydeals.co.uk" class="tabsml">Holidays</a></td>
-          <td width="4" bgcolor="#CC0000"><img src="/images/ch-tab-r.gif" width="4" height="17"></td>
+          <td width="4" valign="top" bgcolor="#CC0000"><img src="/images/ch-tab-r.gif" width="4" height="17"></td>
 <td width="1"><img src="/images/spacer.gif" width="1" height="1"></td>
-          <td width="4" bgcolor="#FF6600"><img src="/images/ch-sb-tab-l.gif" width="4" height="17"></td>
+          <td width="4" valign="top" bgcolor="#FF6600"><img src="/images/ch-sb-tab-l.gif" width="4" height="17"></td>
 <td width="88" align="center" bgcolor="#FF6600"><a href="http://www.cheapholidaydeals.co.uk/short-breaks/" class="tabsml">Short 
 Breaks</a></td>
-          <td bgcolor="#FF6600"><img src="/images/ch-sb-tab-r.gif" width="4" height="17"></td>
+          <td valign="top" bgcolor="#FF6600"><img src="/images/ch-sb-tab-r.gif" width="4" height="17"></td>
 <td width="1"><img src="/images/spacer.gif" width="1" height="1"></td>
-          <td width="4" bgcolor="#660099" class="tabsml"><img src="/images/ca-tab-l.gif" width="4" height="17"></td>
+          <td width="4" valign="top" bgcolor="#660099" class="tabsml"><img src="/images/ca-tab-l.gif" width="4" height="17"></td>
 <td width="105" align="center" bgcolor="#660099"><a href="http://www.cheapaccommodation.com" class="tabsml">Accommodation</a></td>
-          <td width="4" bgcolor="#660099"><img src="/images/ca-tab-r.gif" width="4" height="17"></td>
+          <td width="4" valign="top" bgcolor="#660099"><img src="/images/ca-tab-r.gif" width="4" height="17"></td>
 </tr>
 </tbody></table></td>
 <td width="33%" class="btbgrey" align="right" nowrap="">&nbsp;&nbsp;&nbsp;&nbsp; 
@@ -89,11 +94,21 @@ UK &amp; Ireland <img src="/images/cfuk-flaguk.gif" alt="Cheap flights UK" width
 <td class="btsw" width="150" nowrap="">International: <a href="http://www.cheapflights.com"><img src="/images/cfuk-flagusa.gif" alt="Cheap flights USA" width="26" height="14" border="0" align="absmiddle"></a>&nbsp;<a href="http://www.cheapflights.ca"><img src="/images/cfuk-flagcanada.gif" alt="Cheap flights Canada" width="28" height="14" border="0" align="absmiddle"></a>&nbsp;<a href="/international/" class="btsw">more</a></td>
 </tr>
 </tbody></table>
-<script language="Javascript" src="/scripts/sdc_cf.js"></script>
+<script language="Javascript" type="text/JavaScript">
+<!--
+var gSplitCode="CFUK";
+//-->
+</script>
+<script language="Javascript" type="text/JavaScript" src="/scripts/wtss.js"></script>
+<noscript><img border="0" name="DCSIMG" width="1" height="1" src="http://213.52.204.207/njs.gif?dcsuri=/nojavascript&dcssip=www.cheapflights.co.uk&WT.sp=CFUK&WT.js=No"></noscript>
+
+
 <!--- end TopBar --->
 <table width="99%" height="300" border="0" cellspacing="0" cellpadding="0" align="center"><tbody><tr><td width="2">&nbsp;</td><td width="132" bgcolor="#0066FF" valign="top" align="center">
 <!--- start navFlights ---><table width="132" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#edece9"><tbody><tr><td width="10" class="borderbluel">&nbsp;</td><td valign="top" class="borderbluer" align="left"><div class="sepnav"></div><a class="leftnav" href="/find-a-cheap-flight/">Find cheap flights</a><br>
 <a class="leftnav" href="/lastminute/">Last minute flights</a><br>
+<a class="leftnav" href="/low-cost-airline/low-cost-weekend-deals.html">Weekend hot deals</a><br>
+<a class="leftnav" href="/low-cost-news.html">Low cost news</a><br>
 <a class="leftnav" href="/low-cost-airline/low-cost-deals.html">Low cost airlines</a><br>
 <a class="leftnav" href="/flights/business/">Business &amp; 1st</a><br>
 <a class="leftnav" href="/book-flights-online.html">Book flights online</a><br>
@@ -110,7 +125,7 @@ UK &amp; Ireland <img src="/images/cfuk-flaguk.gif" alt="Cheap flights UK" width
 </tr>
 </tbody></table>
 <table width="132" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#edece9" class="borderltgreynt"><tbody><tr> <td width="10">&nbsp;</td><td width="122" align="left" valign="top" class="smallLinks">
-<form name="emailform" action="http://reg.cheetahmail.com/cgi-bin/subscribers/regf" method="post">
+<form name="emailform" action="http://ebm.cheetahmail.com/r/regf2" method="post">
 <div class="sepnav"></div>Sign-up here for news of all the best deals<br>
 <input type="hidden" name="n" value="12">
 <input type="hidden" name="aid" value="216061046">
@@ -200,14 +215,16 @@ A "must-subscribe"<br>
       </tbody></table><br></td></tr></tbody></table><br></td><td width="30">&nbsp;</td><td valign="top"><br><br>
         
 
-</td></tr></tbody></table><table width="99%" border="0" cellspacing="0" cellpadding="0" align="center"><tbody><tr><td width="2" rowspan="2">&nbsp;</td><td width="132" bgcolor="#0066FF" rowspan="2">&nbsp;</td><td width="30" rowspan="2">&nbsp;</td><td class="smallLinks"><a class="smallLinksblue" href="/misc/howto.html">Help</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;<a class="smallLinksblue" href="/site-map.html">Site Map</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;<a class="smallLinksblue" href="/about-us/">About us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="smallLinksblue" href="/useful-links/">Useful links</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="smallLinksblue" href="/international/">International</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="smallLinksblue" href="http://www.cheapaccommodation.com/">Cheap Accommodation &amp; </a><a class="smallLinksblue" href="http://www.cheap-hotels.co.uk">Hotels</a></td></tr><tr><td bgcolor="#0066FF" align="right" class="btsw">© 1996 - 2004 Cheapflights Ltd all rights reserved&nbsp;&nbsp;<script src="/scripts/fav.js"></script>&nbsp;<a class="btsw" href="/privacy.html">Privacy Policy</a>&nbsp;|&nbsp;<a class="btsw" href="/terms-and-conditions.html">Terms &amp; Conditions</a></td></tr></tbody></table>
+</td></tr></tbody></table><table width="99%" border="0" cellspacing="0" cellpadding="0" align="center"><tbody><tr><td width="2" rowspan="2">&nbsp;</td><td width="132" bgcolor="#0066FF" rowspan="2">&nbsp;</td><td width="30" rowspan="2">&nbsp;</td>
+<td class="smallLinks"><a class="smallLinksblue" href="/misc/howto.html">Help</a> | <a class="smallLinksblue" href="/site-map.html">Site Map</a> | <a class="smallLinksblue" href="/about-us/">About Us</a> | <a class="smallLinksblue" href="http://www.cheapaccommodation.com">Cheap Hotels</a> | <a class="smallLinksblue" href="http://www.cheapholidaydeals.co.uk">Cheap Holidays</a> | <a class="smallLinksblue" href="http://www.cheapholidaydeals.co.uk/short-breaks/">Short Breaks</a> | <a class="smallLinksblue" href="http://www.cheapflights.com">Cheap Flights</a> (USA) | <a class="smallLinksblue" href="/international/">International</a></td>
+</tr><tr><td bgcolor="#0066FF" align="right" class="btsw">© 1996 - 2004 Cheapflights Ltd all rights reserved&nbsp;&nbsp;<script src="/scripts/fav.js"></script>&nbsp;<a class="btsw" href="/privacy.html">Privacy Policy</a>&nbsp;|&nbsp;<a class="btsw" href="/terms-and-conditions.html">Terms &amp; Conditions</a></td></tr></tbody></table>
 
 <script language="javascript">
-var Ipaddress = "209.237.238.181";
+var Ipaddress = "209.237.238.176";
 </script>
 <script language="javascript" src="/scripts/ukcookiecheck.js"></script>
 <script><!--
-window.open('/emailpopup.html','','width=340,height=235,resizable=false,scrollbars=no' );
+window.open('/emailpopup.html','','width=376,height=250,resizable=false,scrollbars=no' );
 --></script>
 <script language="Javascript" src="/scripts/hlppc2.js"></script>
 
