jjhuddle.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;sports",
  "char_count": 4124,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.32,
  "homepage_snapshot_redirected_domain": "jjhuddle.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001082250id_/http://www.jjhuddle.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001082250id_/http%3A//jjhuddle.com",
  "interval": "2004_B",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "jjhuddle.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206211916id_/http%3A//www.jjhuddle.com/update/privacy.htm",
  "policy_title": "J.J.'s Ohio High School Sports Huddle",
  "policy_url": "jjhuddle.com/update/privacy.htm",
  "sha1": "64aa433989864fc25153156dab4f50df8383d293",
  "simhash": 7747717542106387130,
  "simhash_updated": false,
  "site_hostname": "jjhuddle.com",
  "site_url": "http://jjhuddle.com",
  "smog": 14.02,
  "strict_updated": true,
  "timestamp": "20041206211916",
  "word_count": 675,
  "year": 2004
}

--- a/j/jj/jjh/jjhuddle.com.html
+++ b/j/jj/jjh/jjhuddle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jjhuddle.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602191634id_/http%3A//jjhuddle.com/update/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jjhuddle.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206211916id_/http%3A//www.jjhuddle.com/update/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>J.J.'s Ohio High School Sports Huddle</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -41,7 +41,7 @@
 /***         goetz@lawrencegoetz.com http://www.lawrencegoetz.com/ ***/
 
 	// Indicate how many banner ads there are.
-	var amount=9;
+	var amount=8;
 
 
 	// Array Function.
@@ -72,38 +72,35 @@
 	image[0]="http://www.jjhuddle.com/bannerads/sportsofficialsonline.jpg";
 	link[0]="http://www.sportsofficialsonline.com/";
 	info[0]="Sports officials online";
+	
+	image[1]="http://www.jjhuddle.com/bannerads/TraughBanner.gif";
+	link[1]="http://www.awoodshop.com/pages/3/index.htm";
+	info[1]="Trophy Display Case";
+	
+	image[2]="http://www.jjhuddle.com/bannerads/JaniKingBanner.gif";
+	link[2]="http://www.janiking.com";
+	info[2]="Jani-King";
+	
+	image[3]="http://www.jjhuddle.com/bannerads/JJsJunkshopBanner	.gif";
+	link[3]="http://www.shumskyideas.com/huddle";
+	info[3]="JJ's Junkshop";
+	
+   image[4]="http://www.jjhuddle.com/bannerads/ODUbanner2.jpg";
+	link[4]="https://www.ohiodominican.edu/sports/Football/combine.shtml";
+	info[4]="ODU Panther Football";
+	
+	image[5]="http://www.jjhuddle.com/bannerads/sponsorbanner1.gif";
+	link[5]="http://www.jjhuddle.com/update/sponsorsignup.htm";
+	info[5]="Sponsor this site!";
+	
+	image[6]="http://www.jjhuddle.com/bannerads/fundraisingbanner.gif";
+	link[6]="http://www.jjhuddle.com/stories/fundraising.htm";
+	info[6]="Fundraising with JJHuddle!";
+	
+	image[7]="http://www.jjhuddle.com/bannerads/vindybanner468x60.gif";
+	link[7]="http://www.vindy.com";
+	info[7]="The Valley's Greatest Online Newspaper!";
 
-	image[1]="http://www.jjhuddle.com/bannerads/SportsScholarshipbanner.gif";
-	link[1]="http://www.athleticscholarshipbook.com/";
-	info[1]="Sports Scholarship Guide";
-	
-	image[2]="http://www.jjhuddle.com/bannerads/TraughBanner.gif";
-	link[2]="http://www.awoodshop.com/pages/3/index.htm";
-	info[2]="Trophy Display Case";
-	
-	image[3]="http://www.jjhuddle.com/bannerads/JaniKingBanner.gif";
-	link[3]="http://www.janiking.com";
-	info[3]="Jani-King";
-	
-	image[4]="http://www.jjhuddle.com/bannerads/JJsJunkshopBanner	.gif";
-	link[4]="http://www.shumskyideas.com/huddle";
-	info[4]="JJ's Junkshop";
-	
-   image[5]="http://www.jjhuddle.com/bannerads/ODUbanner2.jpg";
-	link[5]="https://www.ohiodominican.edu/sports/Football/combine.shtml";
-	info[5]="ODU Panther Football";
-	
-	image[6]="http://www.jjhuddle.com/bannerads/sponsorbanner1.gif";
-	link[6]="http://www.jjhuddle.com/update/sponsorsignup.htm";
-	info[6]="Sponsor this site!";
-	
-	image[7]="http://www.jjhuddle.com/bannerads/fundraisingbanner.gif";
-	link[7]="http://www.jjhuddle.com/stories/fundraising.htm";
-	info[7]="Fundraising with JJHuddle!";
-	
-	image[8]="http://www.jjhuddle.com/bannerads/vindybanner468x60.gif";
-	link[8]="http://www.vindy.com";
-	info[8]="The Valley's Greatest Online Newspaper!";
 	
 	// Randomly pick a banner to display.
 	function rand(n) {
@@ -138,7 +135,7 @@ function goTo(pagename) {
     <table border="0" cellpadding="0" cellspacing="0" width="680" height="82" bgcolor="#d00000">
       <tbody><tr>
     
-        <td align="right" bgcolor="#D00000" width="189" height="90"><a href="http://www.jjhuddle.com"><img border="0" src="http://www.jjhuddle.com/newjjlogo2a.gif" width="189" height="89"></a></td>
+        <td align="right" bgcolor="#D00000" width="189" height="90"><a href="http://www.jjhuddle.com/"><img border="0" src="http://www.jjhuddle.com/jjhuddleoptimized.gif"></a></td>
     
         <td align="right" bgcolor="#D00000" width="496" height="90"><map name="FPMap0">
           <area href="update/archive.htm" shape="rect" coords="249, 13, 493, 69"></map><img border="0" src="http://www.jjhuddle.com/newhuddleheader35b.gif" width="496" height="90" alt="JJ and Jerry High School Sports Show" usemap="#FPMap0"></td>
@@ -188,7 +185,7 @@ function goTo(pagename) {
 	document.write("<A HREF=\""+link[position]+"\" target=\""+target[position]+"\" onMouseOver= \"window.status ='"+info[position]+"'; return true;\" onMouseOut= \"window.status =''; return true;\">");
 	document.write("<IMG SRC=\""+image[position]+"\" ALT=\""+info[position]+"\"></A>");	
 // -- End Hiding Here -->
-</script><a href="http://www.sportsofficialsonline.com/" target="_self" onmouseover="window.status ='Sports officials online'; return true;" onmouseout="window.status =''; return true;"><img src="http://www.jjhuddle.com/bannerads/sportsofficialsonline.jpg" alt="Sports officials online"></a>
+</script><a href="http://www.awoodshop.com/pages/3/index.htm" target="_self" onmouseover="window.status ='Trophy Display Case'; return true;" onmouseout="window.status =''; return true;"><img src="http://www.jjhuddle.com/bannerads/TraughBanner.gif" alt="Trophy Display Case"></a>
 <!-- End Banner Code --></td></tr></tbody></table>
   </td></tr><tr>
     <td valign="top" width="165" bgcolor="#d00000" height="862">
@@ -473,7 +470,7 @@ Columbus, Ohio 43204.
 JJHuddle.com is prohibited from conditioning a child’s participation in an activity on the child’s disclosing more personal information than is reasonably necessary to participate in such activity.
 Parents can review and request deletion of their child’s personal information, and can refuse to permit further collection or use of their child’s information. In order to request such a review, to revoke previously offered parental consent, or to express any concerns regarding a child’s privacy on our website, please
                       contact us at the below e-mail address.</p><p>Any questions regarding the privacy policy may be
-                      directed to: <a href="mailto:JJsHuddle@aol.com">JJsHuddle@aol.com</a></p>
+                      directed to: <a href="mailto:JJsHuddle@aol.com">jjhuddlestaff@yahoo.com</a></p>
               <p>&nbsp;</p>
             </td>
           </tr>
@@ -487,7 +484,57 @@ Parents can review and request deletion of their child’s personal information,
 <div align="left">
 <table height="80" cellspacing="0" cellpadding="0" width="685" bgcolor="#d00000" border="0"><tbody>
   <tr>
-    <td width="149">&nbsp;</td>
+    <td width="149">
+      <table border="0" width="100%">
+        <tbody><tr>
+          <td width="100%"><!--ONESTAT SCRIPTCODE START-->
+<!--
+// Modification of this code is not allowed and will permanently disable your account!
+// Account ID : 201019
+// Website URL: http://www.jjhuddle.com
+// Copyright (C) 2002-2004 OneStat.com All Rights Reserved
+-->
+<div id="OneStatTag"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td align="center">
+<script language="JavaScript" type="text/javascript">
+<!--
+function OneStat_Pageview()
+{
+    var d=document;
+    var sid="201019";
+    var CONTENTSECTION="";
+    var CUSTOMDATA="";
+    var osp_URL=d.URL;
+    var osp_Title=d.title;
+    var t=new Date();
+    var p="http"+(document.URL.indexOf('https:')==0?'s':'')+"://stat.onestat.com/stat.aspx?tagver=2&sid="+sid;
+    p+="&url="+escape(osp_URL);
+    p+="&ti="+escape(osp_Title);
+    p+="&section="+escape(CONTENTSECTION);
+    p+="&custom="+escape(CUSTOMDATA);
+    p+="&rf="+escape(parent==self?window.document.referrer:top.document.referrer);
+    p+="&tz="+escape(t.getTimezoneOffset());
+    p+="&ch="+escape(t.getHours());
+    p+="&js=1";
+    p+="&ul="+escape(navigator.appName=="Netscape"?navigator.language:navigator.userLanguage);
+    if(typeof(screen)=="object"){
+       p+="&sr="+screen.width+"x"+screen.height;p+="&cd="+screen.colorDepth;
+       p+="&jo="+(navigator.javaEnabled()?"Yes":"No");
+    }
+    d.write('<A HREF="http://www.onestat.com/aspx/login.aspx?sid='+sid+'" target=_blank><IMG ID="ONESTAT_TAG" BORDER="0" SRC="'+p+'" ALT="This site tracked by OneStat.com. Get your own free website tracker."></A>');
+}
+
+OneStat_Pageview();
+//-->
+</script><a href="http://www.onestat.com/aspx/login.aspx?sid=201019" target="_blank"><img id="ONESTAT_TAG" border="0" src="https://stat.onestat.com/stat.aspx?tagver=2&amp;sid=201019&amp;url=https%3A//web.archive.org/web/20041206211916id_/http%253A//www.jjhuddle.com/update/privacy.htm&amp;ti=J.J.%27s%20Ohio%20High%20School%20Sports%20Huddle&amp;section=&amp;custom=&amp;rf=&amp;tz=0&amp;ch=20&amp;js=1&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No" alt="This site tracked by OneStat.com. Get your own free website tracker."></a>
+<noscript>
+<A HREF="http://www.onestat.com" target=_blank><IMG BORDER="0" SRC="http://stat.onestat.com/stat.aspx?tagver=2&sid=201019&js=No&" ALT="log file analysis"></A>
+</noscript>
+</td></tr><tr><td align="center"><div style="DISPLAY: inline; FONT-WEIGHT: bold; FONT-SIZE: 7pt; COLOR: black; FONT-FAMILY: 'Verdana'; HEIGHT: 15px"><a href="http://www.onestat.com" style="text-decoration:none; COLOR: black;" target="_blank">Tracker</a></div></td></tr></tbody></table></div>
+<!--ONESTAT SCRIPTCODE END-->
+</td>
+        </tr>
+      </tbody></table>
+    </td>
     <td width="532">
       <p align="center">&nbsp;</p></td></tr></tbody></table></div>
 <table id="BoardLinks" height="46" cellspacing="0" cellpadding="0" width="675" border="0">
