--- a/s/si/sit/siteblog.com.html
+++ b/s/si/sit/siteblog.com.html
@@ -1,80 +1,19 @@
-<!--The following is the downloaded HTML source of the siteblog.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606015445id_/http%3A//www.sitemeter.com/default.asp%3Faction%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the siteblog.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206212652id_/http%3A//sitemeter.com/default.asp%3Faction%3Dprivacy) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
 <title>Site Meter - Counter and Statistics Tracker</title>
 
 <meta name="description" content="A fast, free Web counter that features custom counters styles. Site Meter creates dynamic 3D charts showing visitors, page views, country maps, visit durations and much more!">
 <meta name="keywords" content="web counter, hit counter, free counter, Counter, web page counter, free web counter, free hit counter, tracker, web tracker, webtracker, free web tracker, webcounter, site statistics, page views, visits, javascript, web stats, log analyzer, log files, visitor reports, hits, visit reports, frontpage web counter, pagemill counter, dreamweaver counter, frontpage counter, site traffic, statistics log, traffic">
 
-<link rel="SHORTCUT ICON" href="./favicon.ico"><style type="text/css">
-<!--
-	TD.toptabs
-	{
-		border-left:	1px solid rgb(128,128,128); 
-		border-right:	1px solid rgb(128,128,128); 
-		border-top:		1px solid rgb(128,128,128);
-	};
-	TD.buttonish
-	{
-		border-top:			2px solid rgb(3,22,49);
-		border-bottom:		2px solid rgb(3,22,49);
-		background-color: 	#EFEFCE;
-	};
-	TD.buttonedges
-	{
-		border-left:	1px solid rgb(128,128,128); 
-		border-right:	1px solid rgb(128,128,128); 
-		border-top:		1px solid rgb(128,128,128);
-		border-bottom:	1px solid rgb(128,128,128);
-	};
-	TD.lefttabs
-	{
-		border-left:	1px solid rgb(128,128,128); 
-		border-bottom:	1px solid rgb(128,128,128); 
-		border-top:		1px solid rgb(128,128,128);
-	};
-
-	.AllBorders
-	{
-		border-left:	1px solid rgb(128,128,128); 
-		border-right:	1px solid rgb(128,128,128); 
-		border-top:		1px solid rgb(128,128,128);
-		border-bottom:	1px solid rgb(128,128,128);
-	};
-	
-	TD.orangetab
-	{
-		border-left:	1px solid #FFCE00; 
-		border-right:	1px solid #FFCE00; 
-		border-top:		1px solid #FFCE00;
-	};
-	
-	
-	.inputDefault
-	{
-	};
-
-	.selectDefault
-	{
-	};
-	
-   A:hover	{color:red}
-
-  .btnDefault 
-  { 
-  		background-color: #EFEFCE; 
-		color: black;
-	}
-	
--->
-</style></head>
-
-
+<link rel="SHORTCUT ICON" href="favicon.ico">
  
-<body bgcolor="#ffffff">
-<script language="JavaScript1.2">var zzconzz="";</script>
+<link rel="stylesheet" href="css/global.css" type="text/css">
+</head>
+ 
+<body>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
@@ -86,20 +25,22 @@
 	</td>
 	<td width="16">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 	<td align="left" height="62">
-		
-<!-- TF 468x60 JScript HORIZ NoPop code -->
+		<!-- TF 468x60 JScript HORIZ NoPop code -->
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=SiteMetercom&adSpace=ROS&size=468x60&type=horiz&pop=0&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-//--> 
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=SiteMetercom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;pop=0&amp;requestID=16018322100.5071363715409971"></script>
+//-->
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=SiteMetercom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;pop=0&amp;requestID=16018364330.6019098236548026"></script>
 <noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=SiteMetercom&adSpace=ROS&size=468x60&requestID=1907667169" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=SiteMetercom&adSpace=ROS&size=468x60&requestID=1907667169" 
+   <a href="http://a.tribalfusion.com/i.click?site=SiteMetercom&adSpace=ROS&size=468x60&requestID=1097442160" target=_blank>
+   <img src="http://a.tribalfusion.com/i.ad?site=SiteMetercom&adSpace=ROS&size=468x60&requestID=1097442160" 
                   width=468 height=60 border=0 alt="Click Here"></a>
 </noscript>
 </center>
 <!-- TF 468x60 JScript HORIZ NoPop code -->
-      
+
+
+
+  
 	</td>
 	<td width="30%">&nbsp;&nbsp;</td>
 </tr>  
@@ -107,8 +48,8 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 
 <!--- #include file=".\include\dsp_TopTabs.asp" ---->
 <table width="100%" bgcolor="#31631" border="0" cellspacing="0" cellpadding="0">
-    <tbody><tr height="30">
-        <td width="220">&nbsp;&nbsp;&nbsp;</td>
+    <tbody><tr>
+        <td height="30" width="220">&nbsp;&nbsp;&nbsp;</td>
 	    <td width="5%">&nbsp;&nbsp;</td>		
 <td nowrap="" align="center"><a title="Home" href="default.asp?action=home"><font size="3" face="Arial" color="white">Home</font></a></td><td>&nbsp;&nbsp;<font face="Arial" size="3" color="white">|</font>&nbsp;&nbsp;</td><td nowrap="" align="center"><a title="Frequently Asked Questions" href="default.asp?action=help"><font size="3" face="Arial" color="white">Help</font></a></td><td>&nbsp;&nbsp;<font face="Arial" size="3" color="white">|</font>&nbsp;&nbsp;</td><td nowrap="" align="center"><a title="Search the Web" href="default.asp?action=search"><font size="3" face="Arial" color="white">Search</font></a></td><td>&nbsp;&nbsp;<font face="Arial" size="3" color="white">|</font>&nbsp;&nbsp;</td><td nowrap="" align="center"><a title="Login to your account" href="default.asp?action=loginform"><font size="3" face="Arial" color="white">Login</font></a></td>	
 	    <td>&nbsp;&nbsp;</td>
@@ -173,15 +114,15 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 </tbody></table>
 <br>
 </td><td width="20%">&nbsp;&nbsp;</td></tr></tbody></table>
-<table height="30" width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#316310">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#316310">
 	<tbody><tr bgcolor="#316310">
-		<td valign="middle" width="40">&nbsp;
+		<td valign="middle" height="30" width="40">&nbsp;
 			<script type="text/javascript" language="JavaScript">var site="sm2sitemeter"</script>
 			<script type="text/javascript" language="JavaScript1.2" src="http://sm2.sitemeter.com/js/counter.js?site=sm2sitemeter">
 			</script>
 			<noscript>
 			<a href="http://sm2.sitemeter.com/stats.asp?site=sm2sitemeter" target=_top>
-			<img src="http://sm2.sitemeter.com/meter.asp?site=sm2sitemeter" title="Site Meter" border=0></a>
+			<img src="http://sm2.sitemeter.com/meter.asp?site=sm2sitemeter" alt="Site Meter" border=0 /></a>
 			</noscript>
 			<!-- Copyright (c)2000 Site Meter -->
 		</td>
@@ -196,6 +137,7 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 		</td>
 		<td width="40">
 		&nbsp;&nbsp;&nbsp;
+		<font size="0" color="gray" face="Arial"><small>0.01&nbsp;seconds</small></font>&nbsp;
 		</td>
 	</tr>
 </tbody></table> 
