--- a/g/gg/ggm/ggmania.com.html
+++ b/g/gg/ggm/ggmania.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ggmania.com privacy policy that was archived on 2003-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20031202024712id_/http%3A//www.boxnetwork.net/privpolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ggmania.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206214506id_/http%3A//www.boxnetwork.net/docs/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Statement</title>
