--- a/m/mi/mil/milonic.com.html
+++ b/m/mi/mil/milonic.com.html
@@ -1,38 +1,37 @@
-<!--The following is the downloaded HTML source of the milonic.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602215909id_/http%3A//www.milonic.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the milonic.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206215120id_/http%3A//www.milonic.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Milonic Solutions Privacy Policy</title>
+<meta name="Description" content="The World's Most Popular JavaScript Website Menu. Cross Browser Web Site Navigation. Free non profit and Open Source licenses.">
+<meta name="keywords" content="dhtml javascript menu popup menu bar free navigation effects cross browser dynamic html demos examples samples">
 <link rel="stylesheet" href="/includes/menu.css" media="screen">
 <link rel="stylesheet" href="/includes/menuprint.css" media="print">
 </head>
-<body class="milonic" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
+<body class="normal" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
+
 
 <!--
 	 Milonic DHTML Website Navigation Menu Version 5.0
 	 Copyright 2004 (c) Milonic Solutions Limited (UK). All Rights Reserved.
 	 Please visit http://www.milonic.com/ for more information.
-
-	 Although this software may have been freely downloaded, you must obtain a license before using it in any production environment.		 
-	 The free use of this menu is only available for Non-Profit, Educational & Personal Web Sites who have obtained a license to use. 
-	 
-	 Free, Commercial and Corporate Licenses are available from our website.
-	 You also need to include a link back to http://www.milonic.com/ if you use the free license.
-	 
-	 All Copyright notices MUST remain in place at ALL times. 
-	 This includes the first three lines of this notice on every page that uses the menu.
-	 If you cannot comply with all of the above requirements, please contact us to arrange a license waiver.
 -->	
-	
-<script language="JavaScript" src="/milonic_src.js" type="text/javascript"></script>	
-<script language="JavaScript">
-if(parent.frames.length){top.location=document.location}
+
+
+
+
+<script type="text/javascript" src="/milonic_src.js"></script>	
+<param copyright="JavaScript Menu by Milonic - http://www.milonic.com">
+<script type="text/javascript">
+if(parent.frames.length)top.location=document.location;
+<!--
 if(ns4)_d.write("<scr"+"ipt language=JavaScript src=/mmenuns4.js><\/scr"+"ipt>");		
   else _d.write("<scr"+"ipt language=JavaScript src=/mmenudom.js><\/scr"+"ipt>"); 
+ -->
 </script>
+<script type="text/javascript" src="/menu_data.php"></script>	
 
-<script language="JavaScript" src="/menu_data.php" type="text/javascript"></script>	
-<!--<SCRIPT language=JavaScript src="/contextmenu.js" type=text/javascript></SCRIPT>-->
+<!--<script language=JavaScript src="/contextmenu.js" type=text/javascript></script>-->
 <script language="JavaScript" src="/dragdrop.js" type="text/javascript"></script>
 <script language="JavaScript" src="/tooltips.js" type="text/javascript"></script>
 
@@ -49,7 +48,7 @@ function incHit(id)
 <tr>
 	<td class=menu1 valign=top colspan=2 style="padding:6;">
 	You need to have JavaScript enabled to get the most of our website<br>
-	The Milonic DHTML Menu will only work on JavaScript enabled browsers.
+	The Milonic DHTML Web Menu will only work on JavaScript enabled browsers.
 	<table border=0 cellpadding=0 cellspacing=4>
 			<td class=menu1 valign=top><a href="/index.php">Home</a></td>
 			<td class=menu1 valign=top><a href="/products.php">Products</a>
@@ -67,23 +66,32 @@ function incHit(id)
 				<li><a href="/tooltips.php">Tooltips</a>
 				<li><a href="/colorpicker.php">Color Picker</a>
 			</td>
-			<td class=menu1 valign=top><a href="/supporthome.php">Support</a>
-				<li><a href="mfa.milonic.com/">Discussion Forum Archive</a>
+			<td class=menu1 valign=top>
+				<li><a href="/mfa/">Discussion Forum Archive</a>
 				<li><a href="/login.php">Login</a>
 				<li><a href="/register.php">Register</a>
-				<li><a href="/list/index.php">Menu Users List</a>
+				<li><a href="/searchengines_milonic.php>Search Engines & Milonic</a>
+				<li><a href="/removelink.php>Removing the forced Link</a>
+				<li><a href="/multiplemenus.php>Multiple Menus</a>
+				<li><a href="/cssbasedmenus.php>CSS Based Menus</a>
+				<li><a href="/apachesetup.php>Apache Setup</a>
+				<li><a href="/iissetup.php>Internet Information Server IIS setup</a>
 				<li><a href="/pipermail/milonic/">Mailing List</a>
 				<li><a href="/menuvinfo.php">Version Info</a>
 			</td>
 			<td class=menu1 valign=top><a href="/aboutmilonic.php">About</a>
 				<li><a href="/aboutus.php">About us</a>
+				<li><a href="/testimonials.php">Testimonials</a>
+				<li><a href="/tablemenu.php">Embedding a Menu inside a Table Cell</a>
+				<li><a href="/nonprofits.php">Investing in None Profits</a>
 				<li><a href="/contactus.php">Contact us</a>
 				<li><a href="/location.php">Where</a>
-				<li><a href="/corp_customers.php">Corporate Clients</a>
+				<li><a href="/corp_customers.php">Distinguished Clients</a>
 				<li><a href="/cbuy.php">Purchase</a>
 				<li><a href="/privacy.php">Privacy</a>
 				<li><a href="/license.php">License</a>
-				<li><a href="http://www.dhtmlmenu.co.uk">Mirror Site</a>
+				<li><a href="/fraudusers.php">Beware of these guys!</a>
+				
 			</td>
 	</table>
 	</td>
@@ -122,7 +130,7 @@ function img_off(img){
 	<tbody><tr>
 		<td valign="top" align="center" class="menu1">
 			<img src="/images/xpblank.gif" width="150" height="1">
-			You are not logged in<br>Click here to log in<br><a href="/login.php?pge=/privacy.php" onmouseover="showtip('<b>You are not logged in</b><br>You need to login to download and use some of the good stuff');img_on('login')" onmouseout="popdown();img_off('login')"><img id="login" border="0" src="/images/login.gif"></a>		</td>
+			Click here to log in<br><a href="/login.php?pge=/privacy.php" onmouseover="showtip('<b>You are not logged in</b><br>You need to login to download and use some of the good stuff');img_on('login')" onmouseout="popdown();img_off('login')"><img id="login" border="0" src="/images/login.gif"></a>		</td>
 		<td width="100%" bgcolor="white" class="menuWB" valign="top">
 			<table cellpadding="13" border="0">
 				<tbody><tr><td class="menuW">
@@ -157,10 +165,7 @@ We use "cookies" to help create a more effective and convenient site experience.
 <b><i>CHOICE TO OPT-OUT</i></b><br>
 Our site provides users the opportunity to opt-out of receiving communications from us at the point where we request information about the user. If you would like to opt-out send email to 
 
-
-
-<a href="mAilto:mmprivacy@milonic.com">privacy@milonic.com</a>
-
+<a href="mailto:mmprivacy@milonic.com">privacy@milonic.com</a>
 
 <br>
 <br>
@@ -174,14 +179,19 @@ By using our site, you agree to this Policy. This is our entire and exclusive Pr
 <br>
 <br>
 <i><b>REVIEWING PERSONAL DATA</b></i><br>
-You can review and validate the information, that we have collected about you by sending email to <a href="mAilto:mmprivacy@milonic.com">privacy@milonic.com</a> and requesting a review on your personal data.
+You can review and validate the information, that we have collected about you by sending email to 
+
+<a href="mailto:mminfo@milonic.com">info@milonic.com</a>
 <br>
 <br>
 <br>
 <b><i>CONTACTING THE WEB SITE</i></b><br>
-If you have any questions or comments about this privacy statement, the practices of this site, or your dealings with this Web Site, you can contact: <a href="mAilto:mminfo@milonic.com">info@milonic.com</a><br>
+If you have any questions or comments about this privacy statement, the practices of this site, or your dealings with this Web Site, you can contact: 
+
+<a href="mailto:mmprivacy@milonic.com">privacy@milonic.com</a>
 	
 	<br><br>
+	<a href="/spamlaws.php">The law on spam email</a>
 
 			</td>
 		</tr></tbody></table>
@@ -202,46 +212,35 @@ If you have any questions or comments about this privacy statement, the practice
 	<tr>
 		<td align="center"><a class="link" href="/list/"><img border="0" src="/images/directory.gif" title="See a list of our JavaScript menu users"></a></td>
 	</tr>
+
+	<tr>
+		<td align="center"><a class="link" href="/advertising.php"><img border="0" src="/images/w_advertise.gif" title="Advertise on the forum archive from just $200 per month"></a></td>
+	</tr>
+
+	
+	
 </tbody></table>
 
 
 	
 <br>
-
+<!--
 Partners	
 
-<table border="0" cellpadding="6" cellspacing="2" bgcolor="white">
-
-	<tbody><tr>
-		<td align="center" class="menuWB">
-			<a onmousedown="incHit(1)" class="link" href="http://www.sms2email.com" target="_blank">SMS to Email &amp; Email to SMS</a>
-		</td>
-	</tr>
-
-<!--
+<table border=0 cellpadding=6 cellspacing=2 bgcolor=white>
 
 	<tr>
 		<td align=center class=menuWB>
-			<a onmousedown=incHit(2) class=link href="http://www.villas2000.com" target=_blank>Florida Vacation Rentals at Villas2000</a>
+		<a class=link href="http://www.site.com" target=_blank>Partner Text</a>
 		</td>
 	</tr>
 
+	
+
+	
+
+</table>
 -->
-	<tr>
-		<td align="center" class="menuWB">
-			<a onmousedown="incHit(3)" class="link" href="http://www.1-2-3-cover-letter.com" target="_blank">Site that assists in writing covers letters</a>
-		</td>
-	</tr>
-	
-
-	<tr>
-		<td align="center" class="menuWB">
-			<a onmousedown="incHit(4)" class="link" href="/advertising.php">Advertising on milonic.com</a>
-		</td>
-	</tr>
-	
-
-</tbody></table>
 <br>
 <br>
 
@@ -254,7 +253,7 @@ Partners
 			<br>
 			<br>
 			©1998-2004 Milonic Solutions Ltd. UK Registered Company #4406835<br>
-			<a class="link" href="/privacy.php">Privacy Policy</a> | <a class="link" href="/license.php">License Agreement</a> | <a class="link" href="/contactus.php">Contact Us</a> | <a class="link" href="/mysupport.php">Support</a>
+			<a class="link" href="/privacy.php">Privacy Policy</a> | <a class="link" href="/license.php">License Agreement</a> | <a class="link" href="/contactus.php">Contact Us</a> | <a class="link" href="/support.php">Tech Support</a>
 			<br><br><br><br><br><br><br>
 		</td>
 	</tr>
