--- a/j/ja/jan/janbrett.com.html
+++ b/j/ja/jan/janbrett.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the janbrett.com privacy policy that was archived on 2004-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040627061846id_/http%3A//www1.janbrett.com/privacy_statement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the janbrett.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206220338id_/http%3A//www.janbrett.com/privacy_statement.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
