popartuk.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 2557,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "standard",
  "flesch_kincaid": 8.09,
  "homepage_snapshot_redirected_domain": "popartuk.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040923090203id_/http://www.popartuk.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040923090203id_/http%3A//popartuk.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "popartuk.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206221906id_/http%3A//www.popartuk.com/about/privacy-policy.asp",
  "policy_title": "Privacy Policy - PopArtUK",
  "policy_url": "popartuk.com/about/privacy-policy.asp",
  "sha1": "029fb19decf9a77e0cbedd718e783eacfebf6cee",
  "simhash": 13550931817845656321,
  "simhash_updated": false,
  "site_hostname": "popartuk.com",
  "site_url": "http://popartuk.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041206221906",
  "word_count": 429,
  "year": 2004
}

--- a/p/po/pop/popartuk.com.html
+++ b/p/po/pop/popartuk.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the popartuk.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603192539id_/http%3A//www.popartuk.com/about/privacy-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the popartuk.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206221906id_/http%3A//www.popartuk.com/about/privacy-policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html lang="en"><head>
 <title>Privacy Policy - PopArtUK</title>
@@ -12,28 +12,23 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body>
-
 <table width="100%" border="0" cellpadding="3" cellspacing="0" id="phdr">
-<tbody><tr><td><a href="/"><img src="/g/l.gif" alt="pop art uk - popular posters and art prints" name="logo" id="logo" width="100" height="97" border="0"></a></td>
+<tbody><tr><td><a href="/"><img src="/g/xmasl.gif" alt="PopArtUK" name="logo" id="logo" width="106" height="101" border="0" align="left"></a></td>
 <td align="right" valign="top">
+<a href="/xmas/"><img src="/g/xmasg.gif" alt="Great Xmas Gifts - browse our present suggestions for all the family" width="282" height="93" vspace="10" border="0" align="left"></a>
 <div id="shopbar"><a href="/store/basket.asp"><img src="/g/bview.gif" alt="View Your Shopping Basket" width="100" height="21" border="0"></a> <a href="https://secure.popartuk.com/checkout1.asp"><img src="/g/bchkout.gif" alt="Proceed to checkout to place your order" width="100" height="21" border="0"></a> <a href="/help/"><img src="/g/bhelp.gif" alt="Buying and delivery help" width="100" height="21" border="0"></a></div>
-<div id="tagline"><a href="/help/buy-online.asp">buy posters and art prints online!</a></div>
-<div id="site"><b>About PopArtUK</b> | <a href="/affiliates/">Affilates</a> | <a href="/contact/">Contact Info</a></div>
-</td></tr>
-<tr><td colspan="2" id="gnavbar">
-<div><a href="/">Home</a> · <a href="/film/" id="film">Film</a> · <a href="/music/" id="music">Music</a> · <a href="/tv-and-sport/" id="tv-and-sport">TV &amp; Sport</a> · <a href="/art/" id="art">Art</a> · <a href="/photography/" id="photography">Photography</a> · <a href="/humour/" id="humour">Humour</a> · <a href="/general/" id="general">General</a> · <a href="/top-sellers/">Top Sellers</a></div>
-</td></tr>
-<tr><td colspan="2" id="srchbar">
-<form action="/search/s.asp" name="srch" id="srch">
-<label for="q" title="Posters &amp; Art Prints search">Search: </label> <input type="text" name="q" id="q"> <input type="submit" name="Go" value="Go" class="stdb">
+
+<div id="site"><a href="/about/" id="about">About PopArtUK</a> | <a href="/affiliates/" id="affiliates">Affiliates</a> | <a href="/contact/" id="contact">Contact Info</a></div><form action="/search/s.asp" name="srch" id="srch">
+<label for="q" title="Posters &amp; Art Prints search">Search: &nbsp;</label> <input type="text" name="q" id="q"> <input type="submit" name="Go" value="Go" class="stdb">
 </form>
 </td></tr>
+<tr><td colspan="2" id="gnavbar">
+<div><a href="/">Home</a> · <a href="/art/" id="art">Art</a> · <a href="/celebs/" id="celebs">Celebs</a> · <a href="/film/" id="film">Film</a> · <a href="/general/" id="general">General</a> · <a href="/humour/" id="humour">Humour</a> · <a href="/music/" id="music">Music</a> · <a href="/photography/" id="photography">Photography</a> · <a href="/tv-and-sport/" id="tv-and-sport">TV &amp; Sport</a> · <a href="/top-sellers/">Top Sellers</a> · <a href="/new/">New Pictures</a></div>
+</td></tr>
 </tbody></table>
-
 <table width="100%" border="0" cellpadding="10" cellspacing="0" id="main">
 <tbody><tr><td width="75%" valign="top">
 
-<div id="bcrmbs"><a href="/">Home</a> » <a href="/about/">About</a> »</div>
 <h1>Privacy Policy Statement</h1>
 <!-- CMS begin -->
 <h2>Quick Summary</h2>
