--- a/u/un/uni/uniquerewards.com.html
+++ b/u/un/uni/uniquerewards.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uniquerewards.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604083415id_/http%3A//www.uniquerewards.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uniquerewards.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206223113id_/http%3A//uniquerewards.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
  <title>Unique Rewards / Privacy Policy</title>
