--- a/q/qu/qui/quizyourfriends.com.html
+++ b/q/qu/qui/quizyourfriends.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the quizyourfriends.com privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401192504id_/http%3A//www03.quizyourfriends.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quizyourfriends.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206224115id_/http%3A//www02.quizyourfriends.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>Quiz Your Friends</title>
+<title>QuizYourFriends - Privacy Policy</title>
 
 <meta name="description" content="Quiz Your Friends: Put your friends to the test.">
 <meta name="keywords" content="quiz, movies exam, tv quiz, sports test, fashion quiz, quiz your friends, send to friends">
@@ -21,19 +21,7 @@
     <td height="62"><iframe name="topbanner" src="FC468.html" scrolling="no" frameborder="0" width="468" height="60"></iframe></td>
 </tr>
 </tbody></table>
-<table border="0" width="755" cellspacing="0" cellpadding="0">
-<tbody><tr>
-<td><img src="images/quiz_left.gif" alt="" width="48" height="33" border="0"></td>
-    <td><a href="index.html"><img src="images/nav_home.gif" alt="" width="58" height="33" border="0"></a></td>
-    <td><a href="music.html"><img src="images/nav_music.gif" alt="" width="64" height="33" border="0"></a></td>
-    <td><a href="movies.html"><img src="images/nav_movies.gif" alt="" width="69" height="33" border="0"></a></td>
-    <td><a href="tv.html"><img src="images/nav_tv.gif" alt="" width="47" height="33" border="0"></a></td>
-	<td><a href="createaquiz.html"><img src="images/nav_createquiz.gif" alt="" width="100" height="33" border="0"></a></td>
-	<td><img src="images/quiz_right.gif" alt="" width="2" height="33" border="0"></td>
-	<td><a href="http://quizyourfriends.skilljam.com/" target="_blank"><img src="images/nav_cashgames.gif" alt="" width="126" height="33" border="0"></a></td>
-<td><img src="images/quiz_right.gif" alt="" width="241" height="33" border="0"></td>
-</tr>
-</tbody></table>
+<iframe name="tabs" src="tabs.html" scrolling="no" frameborder="0" width="755" height="33"></iframe>
 
 
 
