--- a/f/fr/frb/frbsf.org.html
+++ b/f/fr/frb/frbsf.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the frbsf.org privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610162829id_/http%3A//frbsf.org/tools/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the frbsf.org privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206224225id_/http%3A//www.frbsf.org/tools/legal/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/tools.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -186,78 +186,112 @@ Us</a>&nbsp; |&nbsp; <a href="/tools/index.html" class="toolbar">Site Map</a><!-
   <tbody><tr valign="top"> 
     <td>
       <!-- #BeginEditable "content" --> 
-      <p class="pageSectionTitle"> Federal Reserve Bank of San Francisco Privacy 
-        Policy </p>
-      <p>This is the web site of the Federal Reserve Bank of San Francisco. The 
-        Bank respects your privacy. </p>
-      <p>The personal information you choose to provide us is voluntary. We do 
-        not use cookies, and we do not require you to provide any information 
-        about yourself that you do not wish to share.</p>
-      <p>You may choose to provide us with personal information if, for example, 
-        you subscribe to our publications, send us questions through e-mail, answer 
-        our user surveys, register for an event, or participate in our on-line 
-        activities. </p>
-      <p>If you participate in a user survey, your answers and personal information 
-        will <em>only</em> be analyzed <em>in aggregate</em>. The information 
-
-        will be used to help us tailor our web site, publications, and services 
-        to our users' needs and to help us understand our audience. </p>
-      <p>If you provide us with your postal or e-mail address or telephone number, 
-        this information will only be used to </p>
+      <p class="pageSectionTitle"> Federal Reserve Bank of San Francisco Privacy
+      Policy </p>
+      <p> This is the web site of the Federal Reserve Bank of San Francisco.
+      The Bank respects your privacy. </p>
+      <p> The personal information that you choose to provide to us is voluntary.
+        We do not use cookies, and we do not require you to provide any information
+      about yourself that you do not wish to share.</p>
+      <p> You may choose to provide us with personal information if, for example,
+        you subscribe to our publications, send us questions through e-mail,
+        answer our user surveys, register for an event, or participate in our
+      on-line activities.</p>
+      <p>If you participate in a user survey, your answers
+        and personal information will only be analyzed <em>in aggregate.</em> The
+        information will be used to help
+        us tailor our web site, publications, and services to our users' needs
+        and to help us understand our audience. <br>
+        If you provide us with your postal or e-mail address or telephone number,
+      this information will only be used to </p>
       <ul>
-        <li> provide you with the publications or information requested; </li>
-        <li>clarify your order or request; </li>
-        <li>provide you with related information; or </li>
-        <li>send you a token of appreciation through postal mail if you participate 
-          in selected on-line activities. </li>
+        <li>provide you with the publications or information requested;</li>
+        <li>clarify
+          your order or request; </li>
+        <li> provide you with related information; or </li>
+        <li> send you a token of appreciation through postal mail if you participate
+            in selected on-line activities.</li>
       </ul>
-      <p>When you fill out our on-line forms, they are returned to us via electronic 
-        mail. Your responses are not encrypted. We cannot guarantee the security 
-        of information sent via electronic mail. Minor children should always 
-        obtain parental consent before releasing personal information to any web 
-        site.</p>
-      <p>In addition to information voluntarily provided by you, we collect statistical 
-        information about our users <em>in aggregate</em>. We perform analyses 
-        on our web server's log files to identify, among other things</p>
+      <p> When you fill out our on-line forms, they are returned to us via electronic
+        mail. Your responses are not encrypted. We cannot guarantee the security
+        of information sent via electronic mail. Minor children should always
+        obtain parental consent before releasing personal information to any
+      web site.</p>
+      <p> In addition to information voluntarily provided by you, we collect
+        statistical information about our users in aggregate. We perform analyses
+        on our
+      web server's log files to identify, among other things</p>
       <ul>
-        <li>our site's most popular pages; </li>
-        <li>the browsers and operating systems most often used by our visitors; 
-        </li>
-        <li>the sites and search engines that have referred visitors to our site; 
-
-          and </li>
-        <li>the domains (for example, America Online) from which our users visit 
-          us.</li>
+        <li> our site's most popular pages; </li>
+        <li>the browsers and operating systems
+            most often used by our visitors; </li>
+        <li>the sites
+     and search engines that have referred visitors to our site; and </li>
+        <li> the domains (for example, America Online) from which our users
+   visit us. </li>
       </ul>
-      <p>This analysis does not involve <em>personally identifiable</em> information. 
-        It is used <em>only</em> for the purpose of helping us understand and 
-        better meet our audience's needs.</p>
-      <p>For a good explanation of how server log statistical analysis works, 
-        see the <a href="http://ftp.ssa.gov/web_stats.html">example</a> at Social 
-        Security Online.</p>
-      <p>Any information collected on this web site, whether individual or aggregate, 
-        is for Federal Reserve use only. No information about visitors to this 
-        web site is released or sold to third parties.</p>
-      <p><strong><a name="fedville"></a>Notice of the Bank's Information Practices
-      with Regard to Children</strong></p>
+      <p>This analysis does not involve <em>personally identifiable</em> information.
+        It is used only for the purpose of helping us understand and better meet
+      our audience's needs.</p>
+      <p>For a good explanation of how server log statistical
+          analysis works,
+      see the <a href="http://ftp.ssa.gov/web_stats.html">example</a> at Social Security Online.</p>
+      <p>Any information collected
+          through this web site, whether individual or aggregate, is for Federal
+          Reserve use only. No information about
+            visitors
+            to this web site is released or sold to third parties, except that
+            in some cases, the information is stored on a third party server
+        operated by <a href="http://www.lsoft.com/">L-Soft</a>, and information provided through the Jobs portion
+        of this
+            web site is maintained by <a href="http://www.peopleclick.com/">Peopleclick</a>. This privacy policy does not
+            apply
+      to the portion of this web site that is operated by Peopleclick.</p>
+      <p>To
+          change the e-mail address and/or other contact information that you
+        have provided to the Bank through this web site, you may go to
+              the applicable
+              area of the web site and follow the instructions provided (usually
+              found in the e-notification form). Some areas of the Bank, such
+        as Community
+              Development, periodically send inquiries to the individuals on
+        the applicable mailing lists asking if there are any changes to their
+      e-mail addresses.</p>
+      <p> The Bank notifies visitors to this web site of changes to the web
+                site privacy policy by posting the new privacy policy and its
+        revised effective
+      date.</p>
+      <p><strong>Notice of the Bank's Information Practices with Regard to
+      Children</strong></p>
       <p>The Bank does not request that children submit personal information
-        online, enable children to make personal information publicly available
-        through a chat room, message board, or other means, or passively track
-        or use any identifying codes linked to children, such as cookies. The
-        Bank requests a screen name and password in connection with the FedVille
-        portion of its web site, and accepts only the first word entered in the
-        screen name field. The Bank collects the screen name and password to
-        keep a record of the state of the participant's game, so that if the
-        participant leaves the game, the participant can return to the game and
-        continue where he or she last left the game. This information is not
-        disclosed to third parties. Web site operators are prohibited from conditioning
-        a child's participation in an activity on the child's disclosing more
-        personal information than is reasonably necessary to participate in such
-        activity.</p>
-      <hr>
+                    online, enable children to make personal information publicly
+                    available through
+                    a chat room, message board, or other means, or passively
+        track or use any identifying codes linked to children, such as cookies.
+                    The
+                    Bank
+                    requests a screen name and password in connection with the
+            <a href="http://www.frbsf.org/education/fedville/">FedVille</a> portion of
+                    its web site, and accepts only the first word entered in
+        the
+                    screen name field. The Bank collects the screen name and
+        password to keep
+                    a record
+                    of the state of the participant's game, so that if the participant
+                    leaves the game, the participant can return to the game and
+            continue where he
+                    or she last left the game. This information is not disclosed
+                    to third parties. Web site operators are prohibited from
+        conditioning a child's
+                    participation in an activity on the child's disclosing more
+            personal information than is reasonably necessary to participate
+        in such
+      activity.</p>
+      <hr size="1" noshade="">
       <p>Questions or comments about the Federal Reserve Bank of San Francisco's
         privacy policy may be directed to our <a href="javascript:remoteEmail(120)">web
         site administrators</a>.</p>
+      <p class="subMenuText"><em>Revised effective August 6, 2004</em></p>
       <!-- #EndEditable --></td>
   </tr>
 </tbody></table>
