--- a/b/br/bre/bresso.com.html
+++ b/b/br/bre/bresso.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bresso.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604133138id_/http%3A//www.bresso.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bresso.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206225522id_/http%3A//www.bresso.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Bresso: Privacy Policy</title>
@@ -304,8 +304,8 @@ Ads_kid=0;Ads_bid=0;Ads_xl=468;Ads_yl=60;Ads_xp='';Ads_yp='';Ads_opt=0;Ads_wrd='
 <input type="submit" name="Submit" value="sign up now" onclick="location.href='http://bresso.com/ml.shtml'"> <font color="#CCCCCC"><br>
               <font color="#000066">and receive the latest music news, site news, 
               and more. It's FREE!</font></font></p></td></tr></tbody></table>
-<p align="center"><font color="#000066">partner sites:</font><br>
-  <a href="http://www.mp3-2000.com/" target="_blank"><img src="px/mp32k.gif" width="91" height="31" border="0"></a><a href="http://mp3mediaworld.net" target="_blank"><img src="http://membres.lycos.fr/bresso/pics/mp3mw.gif" width="88" height="31" border="0"></a></p>
+<p align="center"><font color="#000066">partner site:</font><br>
+  <a href="http://www.mp3-2000.com/" target="_blank"><img src="px/mp32k.gif" width="91" height="31" border="0"></a></p>
 
     </td><td background="px/cotedroit.jpg" width="16">&nbsp;</td>
   </tr>
